deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeodm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeodm
  template:
    metadata:
      annotations:
        app: nodeodm
      labels:
        app: nodeodm
    spec:
      containers:
      - name: nodeodm
        image: opendronemap/nodeodm:latest
        resources:
          requests:
            memory: "16G"
            cpu: "1"
          limits:
            memory: "32G"
            cpu: "12"
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        volumeMounts:
        - name: persistence
          mountPath: /var/www/data
          subPath: data/nodeodm-workdir
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 30
      volumes:
      - name: persistence
        persistentVolumeClaim:
          claimName: 71aea088-9e00-4f3c-adf7-0579fe1c38b8
