deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeodm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: nodeodm
