deployment/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jupyterhub-user-network 
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: jupyterhub
          component: singleuser-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: jupyterhub
          component: singleuser-server
  podSelector:
    matchLabels:
      app: nodeodm
  policyTypes:
  - Ingress
  - Egress
